<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AdminActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_primary"
        android:elevation="5dp"
        app:title="@string/admin_page">

        <ImageView
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/ic_logout"
            android:contentDescription="@string/logout" />
    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <Button
            android:id="@+id/btnRateBal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/update_balance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.472"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etRemoveMoney" />

        <TextView
            android:id="@+id/tvRate4"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/remove_money"
            app:layout_constraintBottom_toBottomOf="@+id/etRemoveMoney"
            app:layout_constraintEnd_toStartOf="@+id/etRemoveMoney"
            app:layout_constraintStart_toStartOf="@+id/tvBSR2"
            app:layout_constraintTop_toTopOf="@+id/etRemoveMoney" />

        <EditText
            android:id="@+id/etRemoveMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/amount_to_be_deducted"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="@+id/tvBSR2"
            app:layout_constraintTop_toBottomOf="@+id/etAddMoney" />

        <EditText
            android:id="@+id/etAddMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/amount_to_be_added"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="@+id/tvBSR2"
            app:layout_constraintTop_toBottomOf="@+id/etAccountNumber" />

        <TextView
            android:id="@+id/tvRate3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_money"
            app:layout_constraintBottom_toBottomOf="@+id/etAddMoney"
            app:layout_constraintEnd_toStartOf="@+id/etAddMoney"
            app:layout_constraintStart_toStartOf="@+id/tvBSR2"
            app:layout_constraintTop_toTopOf="@+id/etAddMoney" />

        <TextView
            android:id="@+id/tvRate2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_no"
            app:layout_constraintBottom_toBottomOf="@+id/etAccountNumber"
            app:layout_constraintEnd_toStartOf="@+id/etAccountNumber"
            app:layout_constraintStart_toStartOf="@+id/tvBSR2"
            app:layout_constraintTop_toTopOf="@+id/etAccountNumber" />

        <EditText
            android:id="@+id/etAccountNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/enter_account_number"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="@+id/tvBSR2"
            app:layout_constraintTop_toBottomOf="@+id/tvBSR2" />

        <TextView
            android:id="@+id/tvBSR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:text="@string/update_bsr_conversion_rate"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvBSR2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:text="@string/update_user_account_balance"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnRateUpdate" />

        <TextView
            android:id="@+id/tvRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_rate"
            app:layout_constraintBottom_toBottomOf="@+id/etNewRate"
            app:layout_constraintEnd_toStartOf="@+id/etNewRate"
            app:layout_constraintStart_toStartOf="@+id/tvBSR"
            app:layout_constraintTop_toTopOf="@+id/etNewRate" />

        <EditText
            android:id="@+id/etNewRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/enter_new_rate"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="@+id/tvBSR"
            app:layout_constraintTop_toBottomOf="@+id/tvBSR" />

        <Button
            android:id="@+id/btnRateUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/update_rate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etNewRate" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>