<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.InsuranceActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/default_color"
        android:elevation="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Loan Application">

        <ImageView
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logout"
            android:padding="10dp"
            android:src="@drawable/ic_logout" />
    </com.google.android.material.appbar.MaterialToolbar>

    <TextView
        android:id="@+id/recentLoanTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/your_recent_loan_applications"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/noLoanHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:text="@string/no_loan_history"
        android:textSize="25sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recentLoanTitle" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/svRecyclerView"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recentLoanTitle">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView" />

    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/newLoanTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:text="@string/new_loan_application"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recentLoanTitle" />

    <EditText
        android:id="@+id/etLoanAmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/enter_loan_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newLoanTitle" />

    <EditText
        android:id="@+id/etPeriod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/enter_loan_period"
        app:layout_constraintEnd_toEndOf="@+id/etLoanAmt"
        app:layout_constraintStart_toStartOf="@+id/etLoanAmt"
        app:layout_constraintTop_toBottomOf="@+id/loanTypeSpinner" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/loanTypeSpinner"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/etLoanAmt"
        android:layout_alignStart="@+id/etLoanAmt"
        android:layout_alignEnd="@+id/etLoanAmt"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/etLoanAmt"
        app:layout_constraintStart_toStartOf="@+id/etLoanAmt"
        app:layout_constraintTop_toBottomOf="@+id/etLoanAmt" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemIconTint="@color/button"
        app:itemTextColor="@color/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_navigation_view_menu" />

    <Button
        android:id="@+id/btnApply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/button"
        android:text="@string/apply"
        app:layout_constraintEnd_toEndOf="@+id/etPeriod"
        app:layout_constraintStart_toStartOf="@+id/etPeriod"
        app:layout_constraintTop_toBottomOf="@+id/etPeriod" />
</androidx.constraintlayout.widget.ConstraintLayout>