<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.UserHome">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/default_color"
        android:elevation="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Welcome">

        <ImageView
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logout"
            android:padding="10dp"
            android:src="@drawable/ic_logout" />
    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:elevation="15dp"
        android:padding="15dp"
        app:cardCornerRadius="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/account_number"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvBsrBal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvAccount"
                android:layout_margin="10dp"
                android:text="@string/bsr_balance"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvBal"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvBsrBal"
                android:layout_margin="10dp"
                android:text="@string/balance"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/currencySpinner"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvBsrBal"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_toEndOf="@+id/tvBal"
                android:textSize="18sp" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemIconTint="@color/button"
        app:itemTextColor="@color/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_navigation_view_menu" />

    <TextView
        android:id="@+id/tvTransaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_recent_transactions"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/svRecyclerView"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/svRecyclerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView" />

    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/noTransaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_transactions"
        android:textAlignment="center"
        android:textColor="@color/new_user"
        android:textSize="25sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

</androidx.constraintlayout.widget.ConstraintLayout>